# feignhttp

./: Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.yml  sync2gitee.yaml
codegen/: Cargo.toml
codegen/src/: func.rs  structure.rs
codegen/tests/ui/func/: async.rs  body.rs  body_form.rs  form.rs  form2.rs  invalid_url.rs  no_metadata.rs  no_url.rs  no_url2.rs  param.rs  return_value.rs  return_value2.rs
codegen/tests/ui/struct/: method.rs  no_metadata.rs  no_url.rs  no_url2.rs  path.rs
examples/: error.rs  fn.rs  form.rs  header.rs  json.rs  log.rs  param.rs  path.rs  query.rs  stream.rs  struct.rs  text.rs  timeout.rs  url.rs
src/: error.rs  lib.rs
tests/: test_client_request.rs  test_client_response.rs  test_feign_config.rs  test_feign_fn.rs  test_feign_request.rs  test_feign_response.rs  test_feign_struct.rs  test_replace.rs
