[package]
name = "feignhttp-rs-codegen"
version = "0.1.0"
authors = ["dxx <dx1898@foxmail.com>"]
edition = "2021"
description = "FeignHTTP macro support"
documentation = "https://docs.rs/feignhttp-rs"
homepage = "https://github.com/tdcare/feignhttp"
repository = "https://github.com/tdcare/feignhttp"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.62"
